refactor: 修改Changelog显示方式